# pelisplay-series

./: README.md  pelisplay-series.py  pyproject.toml
.github/workflows/: code-quality.yml
src/pelisplay-series/: __main__.py
src/pelisplay_series/: __main__.py
