[tool.poetry]
name = "pelisplay-series"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "pelisplay_series", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.1.1"
mypy = "^0.950"
flake8 = "^4.0.1"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization=true
line-length=79
target-version=['py39']
preview = true
exclude = '''
/(
    /.git
  | /.mypy_cache
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
